--- a/index.html
+++ b/index.html
@@ -45,7 +45,12 @@
         body.light-theme .summary-label,
         body.light-theme .summary-value,
         body.light-theme .note,
-        body.light-theme .section-title {
+        body.light-theme .section-title,
+        body.light-theme label,
+        body.light-theme .input-note,
+        body.light-theme .decor-label,
+        body.light-theme .driving-option,
+        body.light-theme .instagram-link {
             color: #000000;
         }
 
@@ -53,9 +58,41 @@
             color: #000000 !important;
         }
 
+        body.light-theme .title {
+            background: none;
+            -webkit-text-fill-color: #000000;
+            color: #000000;
+        }
+
+        body.light-theme select,
+        body.light-theme input,
+        body.light-theme textarea {
+            background: #ffffff;
+            color: #000000;
+            border: 1px solid #cccccc;
+        }
+
+        body.light-theme ::placeholder {
+            color: #555555;
+        }
+
+        body.light-theme select:focus,
+        body.light-theme input:focus,
+        body.light-theme textarea:focus {
+            border-color: #000000;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        }
+
         body.light-theme .btn {
-            background: #000000;
-            color: #FFD700;
+            background: rgba(0, 0, 0, 0.05);
+            color: #000000;
+            border: 1px solid #dddddd;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        body.light-theme .btn:hover {
+            background: rgba(0, 0, 0, 0.1);
+            box-shadow: 0 7px 20px rgba(0, 0, 0, 0.2);
         }
 
         body.light-theme .driving-option {
@@ -65,6 +102,31 @@
 
         body.light-theme .driving-option:hover {
             background: rgba(0, 0, 0, 0.1);
+            transform: translateY(-3px);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        body.light-theme .seg-item {
+            background: rgba(0, 0, 0, 0.05);
+            border-color: #dddddd !important;
+            color: #000000;
+        }
+
+        body.light-theme .seg-item:hover {
+            background: rgba(0, 0, 0, 0.1);
+            transform: translateY(-3px);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        body.light-theme .seg-item:has(input:checked),
+        body.light-theme .seg-item input:checked + span {
+            background: #d4af37;
+            color: #000000;
+            border-color: #d4af37 !important;
+        }
+
+        body.light-theme .seg-item:focus-within {
+            box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.2) !important;
         }
 
         .container {
@@ -116,10 +178,25 @@
             color: #FFD700;
             cursor: pointer;
             font-size: 1.2rem;
+            padding: 8px;
+            border-radius: 6px;
+            transition: all 0.3s ease;
+        }
+
+        .theme-toggle:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 4px 8px rgba(212, 175, 55, 0.3);
         }
 
         body.light-theme .theme-toggle {
             color: #000000;
+            background: rgba(0, 0, 0, 0.05);
+            border: 1px solid #dddddd;
+        }
+
+        body.light-theme .theme-toggle:hover {
+            background: rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
 
         /* Circular logo container */
@@ -258,6 +335,12 @@
             flex:1;
             text-align:center;
         }
+
+        .seg-item:hover {
+            background: rgba(212, 175, 55, 0.2);
+            transform: translateY(-3px);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+        }
         
         .seg-item input{
             display:none
@@ -365,12 +448,25 @@
             border: 2px solid #FFD700;
             border-radius: 10px;
             transition: all 0.3s ease;
+            background: transparent;
         }
 
         .instagram-link:hover {
             background: #FFD700;
             color: #000;
-            transform: scale(1.05);
+            transform: translateY(-3px);
+            box-shadow: 0 7px 20px rgba(212, 175, 55, 0.4);
+        }
+
+        body.light-theme .instagram-link {
+            border-color: #dddddd;
+            background: rgba(0, 0, 0, 0.05);
+        }
+
+        body.light-theme .instagram-link:hover {
+            background: rgba(0, 0, 0, 0.1);
+            color: #000000;
+            box-shadow: 0 7px 20px rgba(0, 0, 0, 0.2);
         }
 
         .instagram-link i {
@@ -469,6 +565,8 @@
 
         .driving-option:hover {
             background: rgba(255, 215, 0, 0.2);
+            transform: translateY(-3px);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
         }
 
         .driving-option.selected {
