--- a/index.html
+++ b/index.html
@@ -487,6 +487,7 @@
             padding: 15px;
             border-radius: 15px;
             background: rgba(255, 215, 0, 0.05);
+            position: relative;
         }
 
         .car-image-container.show {
@@ -499,6 +500,22 @@
             border-radius: 10px;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
             border: 2px solid #d4af37;
+        }
+
+        .view-full-image {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            background: rgba(212, 175, 55, 0.8);
+            border: none;
+            color: #000;
+            padding: 5px 8px;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        .view-full-image:hover {
+            background: #ffd700;
         }
 
         .booking-summary {
@@ -757,17 +774,17 @@
                     <label for="vehicle">Select Your Vehicle:</label>
                     <select id="vehicle" name="vehicle" required>
                         <option value="">Choose a vehicle...</option>
-                        <option value="AUDI A6">AUDI A6 - INR 16000</option>
-                        <option value="BMW 5 Series F10 (Old Shape)">BMW 5 Series F10 (Old Shape) - Price TBD</option>
-                        <option value="BMW 5 Series G30">BMW 5 Series G30 - Price TBD</option>
-                        <option value="BMW Convertible">BMW Convertible - INR 26000</option>
-                        <option value="Hyundai Creta">Hyundai Creta - INR 12000</option>
-                        <option value="Hyundai Verna">Hyundai Verna - INR 12000</option>
-                        <option value="Mercedes CLA 200">Mercedes CLA 200 - INR 14000</option>
-                        <option value="Mercedes G Wagon">Mercedes G Wagon - INR 160000</option>
-                        <option value="Mercedes S Class">Mercedes S Class - INR 22000</option>
-                        <option value="Range Rover Sport">Range Rover Sport - INR 85000</option>
-                        <option value="Range Rover Sport 2">Range Rover Sport 2 - INR 125000</option>
+                        <option value="AUDI A6">AUDI A6</option>
+                        <option value="BMW 5 Series F10 (Old Shape)">BMW 5 Series F10 (Old Shape)</option>
+                        <option value="BMW 5 Series G30">BMW 5 Series G30</option>
+                        <option value="BMW Convertible">BMW Convertible</option>
+                        <option value="Hyundai Creta">Hyundai Creta</option>
+                        <option value="Hyundai Verna">Hyundai Verna</option>
+                        <option value="Mercedes CLA 200">Mercedes CLA 200</option>
+                        <option value="Mercedes G Wagon">Mercedes G Wagon</option>
+                        <option value="Mercedes S Class">Mercedes S Class</option>
+                        <option value="Range Rover Sport">Range Rover Sport</option>
+                        <option value="Range Rover Sport 2">Range Rover Sport 2</option>
                     </select>
                 </div>
 
@@ -803,6 +820,7 @@
 
             <div class="car-image-container" id="carImageContainer">
                 <img id="carImage" class="car-image" src="#" alt="Selected Car">
+                <button id="viewFullImage" class="view-full-image" type="button">View</button>
             </div>
 
             <div class="form-section driving-section full-width">
@@ -893,11 +911,8 @@
 
         // Car images mapping
         const CAR_IMAGES = {
-            "BMW 5 SERIES G30": "https://cdn.jsdelivr.net/gh/free-whiteboard-online/Free-Erasorio-Alternative-for-Collaborative-Design@aa33fd78421e1a8fa9e1ff6d95800fc75c5c61b1/uploads/2025-08-22T09-42-16-425Z-k1kxvaegs.jpg",
-            "BMW 5 Series F10 (Old Shape)": "https://cdn.jsdelivr.net/gh/free-whiteboard-online/Free-Erasorio-Alternative-for-Collaborative-Design@7766519b7d48ee97144293d33bd1abcaa1dc7537/uploads/2025-08-22T09-43-49-237Z-bl0h1uu6i.jpg",
-            "Range Rover Sport": "https://cdn.jsdelivr.net/gh/free-whiteboard-online/Free-Erasorio-Alternative-for-Collaborative-Design@7651fdcb4d348df3e803de2255e8f0b5a1821dc9/uploads/2025-08-22T09-44-23-132Z-uxngpxuq2.jpg",
-            "Mercedes G Wagon": "https://cdn.jsdelivr.net/gh/free-whiteboard-online/Free-Erasorio-Alternative-for-Collaborative-Design@ef38be0a76189d47ee79a3a182c2c16979e8d014/uploads/2025-08-22T09-45-09-584Z-uowaboqrx.jpg",
-            "AUDI A6": "https://cdn.jsdelivr.net/gh/free-whiteboard-online/Free-Erasorio-Alternative-for-Collaborative-Design@a47d1cecb04bbd648bc7a22ff99f74a78bee551c/uploads/2025-08-22T09-45-58-518Z-z518bw92t.jpg"
+            // TODO: Add vehicle image mappings using direct links from
+            // https://postimg.cc/gallery/Yr7VvJf/ab21c185
         };
 
         // WhatsApp message builder function
@@ -1101,12 +1116,19 @@
         document.getElementById('vehicle').addEventListener('change', function() {
             const carImageContainer = document.getElementById('carImageContainer');
             const carImage = document.getElementById('carImage');
-            
+
             if (this.value && CAR_IMAGES[this.value]) {
                 carImage.src = CAR_IMAGES[this.value];
                 carImageContainer.classList.add('show');
             } else {
                 carImageContainer.classList.remove('show');
+            }
+        });
+
+        document.getElementById('viewFullImage').addEventListener('click', function() {
+            const src = document.getElementById('carImage').src;
+            if (src && src !== '#') {
+                window.open(src, '_blank');
             }
         });
 
